@@ -203,6 +203,7 @@ height=768
 	ref=unit-panel
  	id=label-hp
  	font_size=10
+	font_rgb=180,180,180
  	text= _ "HP"
  	rect="=+84,=+1,+54,+12"
  	xanchor=right
@@ -212,6 +213,7 @@ height=768
  	ref=unit-panel
  	id=label-xp
  	font_size=10
+	font_rgb=180,180,180
  	text= _ "XP"
  	rect="=+84,=+28,=+54,+12"
  	xanchor=right
@@ -221,6 +223,7 @@ height=768
  	ref=unit-panel
  	id=label-mp
  	font_size=10
+	font_rgb=180,180,180
  	text= _ "MP"
  	rect="=+84,=+55,=+54,+12"
  	xanchor=right
@@ -399,6 +402,7 @@ height=768
 		[unit_traits]
 		id=unit-traits
 		font_size=12
+		font_rgb=165,165,165
 		rect="=,+0,+130,+16"
 		xanchor=right
 		yanchor=fixed
@@ -414,6 +418,7 @@ height=768
 		[unit_level]
 		id=unit-level
 		font_size=12
+		font_rgb=165,165,165
 		rect="=,+0,=,+16"
 		prefix= _ "statuspanel^level"
 		prefix_literal=" "
@@ -423,6 +428,7 @@ height=768
 		[unit_alignment]
 		id=unit-alignment
 		font_size=12
+		font_rgb=165,165,165
 		rect="=,+0,=,+16"
 		xanchor=right
 		yanchor=fixed
@@ -431,6 +437,7 @@ height=768
 		[unit_abilities]
 		id=unit-abilities
 		font_size=12
+		font_rgb=165,165,165
 		rect="=,+0,=,+16"
 		xanchor=right
 		yanchor=fixed
