@@ -35,6 +35,8 @@ SVN trunk (1.1.x):
    * The Dark Hordes
      * Underground Pool no longer has units off map and in walls
  * user interface
+   * added font colors to theme
+   * reorganized side-bar information
    * fix untranslated unit create dialog (#4424)
    * changed recall to show recall list even when gold < 20
    * added advancement and AMLA indicator icons, tooltips to dfool theme
